# tokio-util-codec-compose

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  ci
.github/workflows/: check.yml  release.yml
examples/: socks.rs  socks_simple.rs  socks_validation.rs
src/: lib.rs
src/combinators/: decode.rs  mod.rs
src/combinators/decode/: mod.rs
src/decode/: adaptors.rs  mod.rs
src/decode/adaptors/: and_then.rs  boxed.rs  map.rs  map_err.rs  map_into.rs  mod.rs  then.rs  try_map.rs  try_map_into.rs
src/decode/combinators/: mod.rs
src/decode/combinators/adaptors/: and_then.rs  boxed.rs  map.rs  map_err.rs  map_into.rs  mod.rs  then.rs  try_map.rs  try_map_into.rs
src/decode/primitives/: ints.rs  mod.rs
src/elements/: ints.rs  mod.rs
src/encode/: mod.rs
src/encode/adaptors/: contra_map.rs  mod.rs
src/encode/combinators/: mod.rs
src/encode/combinators/adaptors/: contra_map.rs
src/primitives/: ints.rs  mod.rs
