[package]
name = "tokio-util-codec-compose"
version = "0.1.1"
description = "Building blocks for composing tokio-util codecs"
edition = "2021"
license = "MIT"
repository = "https://github.com/rvarago/tokio-util-codec-compose"

[dependencies]
bytes = "1"
tokio-util = { version = "0.7", features = [ "codec" ]}

[dev-dependencies]
anyhow = "1"
proptest = "1"
